<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/inventory_1"
        android:layout_width="125dp"
        android:layout_height="17dp"
        android:layout_marginLeft="125dp"
        android:layout_marginTop="73dp"
        android:background="@drawable/inventory1"/>

    <ImageView
        android:id="@+id/flock"
        android:layout_width="68dp"
        android:layout_height="50dp"
        android:layout_marginLeft="160dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="0dp"
        android:background="@drawable/flock" />


    <TextView
        android:layout_width="189dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="94dp"
        android:text="@string/trouble"
        android:layout_marginTop="20dp"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="64dp"
        android:layout_marginRight="40dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="1sp"
        android:text="@string/text"
        android:textColor="@color/black" />

    <EditText
        android:id="@+id/empIdfEt"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:textSize="15sp"
        android:hint="@string/empId"
        android:textColorHint="@color/black"
        android:paddingLeft="15dp"
        android:layout_marginTop="27dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/emp_id_bg"
        android:inputType="text"/>
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/empIdfReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:helperText="@string/empReq"
        app:helperTextTextColor="#FFEA0E0E"
        android:layout_marginLeft="55dp">

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/sendbtn"
        android:layout_width="300dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:background="@drawable/selected_tab"
        android:text="@string/send"
        android:textColor="@color/black"
        android:textSize="17sp"
        android:textAllCaps="false"/>
    <LinearLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:orientation="horizontal"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/backToLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="20dp"
            android:text="@string/btl"
            android:textColor="#0038FF"
            android:textSize="15sp"
            android:gravity="center"/>



    </LinearLayout>
</LinearLayout>