<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddDevice"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_margin="10dp"
        android:elevation="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp">

        <Button
            android:id="@+id/backToAdminScreen"
            android:layout_width="21.62dp"
            android:layout_height="38.92dp"
            android:layout_gravity="top"
            android:layout_marginLeft="25dp"
            android:layout_marginTop="50dp"
            android:layout_marginRight="336dp"
            android:layout_marginBottom="14.24dp"
            android:background="@drawable/back"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"></Button>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="136dp"
            android:layout_marginRight="136dp"
            android:layout_marginTop="53dp"
            android:layout_marginBottom="16dp"
            android:text="@string/AD"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="16sp"/>
    </androidx.cardview.widget.CardView>


    <TextView
        android:layout_width="258dp"
        android:layout_height="32dp"
        android:layout_gravity="center"
        android:layout_marginLeft="58dp"
        android:layout_marginRight="59dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/EDOfEmp"
        android:textAlignment="center"
        android:textColor="@color/ash"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:layout_marginLeft="58.7dp"
        android:layout_marginBottom="-20dp"
        android:text="@string/name"
        android:textColor="@color/black"
        android:textStyle="bold" />


    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/deviceNameEt"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:textSize="15sp"
        android:hint="@string/name"
        android:textColorHint="@color/black"
        android:paddingLeft="15dp"
        android:layout_marginTop="27dp"
        android:textColor="@color/black"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/emp_id_bg"
        android:inputType="text"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceNameReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:helperText="@string/nameReq"
        app:helperTextTextColor="#FFEA0E0E"
        android:layout_marginLeft="55dp">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/AssignedTo"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="58.7dp"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/deviceAssignedToEt"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/AssignedTo"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/emp_id_bg"
        android:inputType="textEmailAddress"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceAssignedToReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:helperText="@string/emailReq"
        app:helperTextTextColor="#FFEA0E0E"
        android:layout_marginLeft="55dp">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginLeft="58.7dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="-30dp"
        android:text="@string/DeviceTypes"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/deviceTypeEditText"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/DeviceTypes"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/emp_id_bg"
        android:inputType="number"
        />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/deviceTypeReq"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="55dp"
        android:layout_marginRight="62dp"
        app:helperText="@string/pReq"
        app:helperTextTextColor="#FFEA0E0E">

    </com.google.android.material.textfield.TextInputLayout>


    <TextView
        android:layout_width="103dp"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/DeviceOs"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="58.7dp"
        android:textColor="@color/black"
        android:textStyle="bold" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/osEt"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/DeviceOs"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="27dp"
        android:background="@drawable/emp_id_bg"
        android:inputType="text"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/osReq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:helperText="@string/dReq"
        app:helperTextTextColor="#FFEA0E0E"
        android:layout_marginLeft="55dp">

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:text="@string/DeviceServiceTag"
        android:layout_marginBottom="-30dp"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="58.7dp"
        android:textStyle="bold"
        android:textColor="@color/black"/>
    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/DeviceServiceTagEt"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:hint="@string/DeviceServiceTag"
        android:textColorHint="@color/black"
        android:textSize="15sp"
        android:textColor="@color/black"
        android:paddingLeft="15dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="32dp"
        android:background="@drawable/emp_id_bg"
        android:inputType="text"
        />
    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/serviceTagreq"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:helperText="@string/dReq"
        app:helperTextTextColor="#FFEA0E0E"
        android:layout_marginLeft="55dp">

    </com.google.android.material.textfield.TextInputLayout>


    <Button
        android:id="@+id/addBtn"
        android:layout_width="300dp"
        android:layout_height="48dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="@drawable/selected_tab"
        android:text="@string/Add"
        android:textColor="@color/white"/>




</LinearLayout>
