<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:ignore="Orientation">
    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="132dp"
        android:layout_margin="10dp"
        android:elevation="100dp"
        android:layout_marginStart="18dp"
        android:layout_marginEnd="18dp">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginStart="10dp"
        >
        <ImageView
            android:layout_width="85dp"
            android:layout_height="111dp"
            android:background="@drawable/laptop"
            android:gravity="center"
            android:textColor="@color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>
        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dn"
            android:layout_marginTop="18dp"
            android:layout_marginStart="111dp"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:letterSpacing="-0.03"
            android:textSize="16sp"
            />

<!--        <ImageView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="111dp"-->
<!--            android:layout_marginTop="52dp"-->
<!--            android:background="@drawable/selected_tab"-->
<!--            android:textColor="@color/black"/>-->

<!--        <TextView-->
<!--            android:id="@+id/deviceType"-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginStart="113dp"-->
<!--            android:layout_marginTop="55dp"-->
<!--            android:text="@string/deviceType"-->
<!--            android:textColor="@color/white"-->
<!--            android:textSize="10sp" />-->
        <Button
            android:id="@+id/deviceType"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="-39dp"
            android:layout_marginTop="48dp"
            android:background="@drawable/selected_tab"
            android:text="@string/deviceType"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="17sp"
            tools:ignore="TouchTargetSizeCheck" />
        <TextView
            android:id="@+id/deviceTag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="111dp"
            android:layout_marginTop="80dp"
            android:text="@string/deviceTag"
            android:textColor="@color/ash"
            android:textSize="10sp" />
        <TextView
            android:id="@+id/deviceOS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="180dp"
            android:layout_marginTop="80dp"
            android:text="@string/deviceOs"
            android:textColor="@color/ash"
            android:textSize="10sp"/>
        <Button
            android:id="@+id/click_here_to_assign"
            android:layout_width="wrap_content"
            android:layout_height="28dp"
            android:layout_marginStart="109dp"
            android:layout_marginTop="90dp"
            android:text="@string/aEmp"

            android:textColor="@color/ash"
            android:textSize="8sp"
            tools:ignore="TouchTargetSizeCheck" />
    </androidx.cardview.widget.CardView>
</LinearLayout>